// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard.vue RepositoryCard.vue renders correctly with diferents props When intents array props and labelEntities array props have a arary 1`] = `
<bhcard-stub>
  <div class="bh-card__left__content__flex-display"><strong> cat and dog</strong>
    <div class="bh-card__left__content__flex-display__label">
      <p><strong>0</strong> Sentences </p>
      <p><strong>0</strong> Entities</p>
    </div>
  </div>
  <p>Entities</p>
</bhcard-stub>
`;

exports[`RepositoryCard.vue renders correctly without any array props 1`] = `
<bhcard-stub>
  <div class="bh-card__left__content__flex-display"><strong> dog</strong>
    <div class="bh-card__left__content__flex-display__label">
      <p><strong>0</strong> Sentences </p>
      <!---->
    </div>
  </div>
  <!---->
</bhcard-stub>
`;
